# DualBoot

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: main.yml
chat/: client.py  server.py
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_author_alter_task_performer.py  0004_user_date_of_birth_user_phone.py  0005_user_avatar_picture.py
main/models/: task.py  user.py
main/services/: mail.py  single_resource.py  storage_backends.py
sql/: sql.md
task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py  utils.py
test/: base.py  conftest.py  test_admin.py  test_auth.py  test_mail.py  test_permissions.py  test_tag.py  test_task.py  test_user.py
test/fixtures/factories/: tag.py  task.py  user.py
test/test_views/: test_countdown.py  test_current_user.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
