[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
drf-yasg = "^1.21.6"
coreapi = "^2.3.3"
djangorestframework-simplejwt = "^5.2.2"
factory-boy = "^3.3.0"
coveralls = "^3.3.1"
rollbar = "^0.16.3"
newrelic = "^8.8.1"
pillow = "^10.0.0"
django-storages = "^1.13.2"
boto3 = "^1.28.16"
drf-extensions = "^0.7.1"
celery = "^5.3.1"
redis = "^4.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest-django = "^4.5.2"
factory-boy = "^3.3.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
